# NumProgSS17

./: CMakeLists.txt  README.md
P1/: .cproject  CMakeLists.txt  Makefile  p1_lr
P10/: CMakeLists.txt  Makefile  Makefile_windows  crs.c  crs.h  matrix.c  p10_crs  p10_crs.c
P2/: CMakeLists.txt  Makefile  Makefile_windows  basic.c  forkbomb.c  matrix.c  matrix.h  p2_blaslr  p2_blaslr.c
P3/: CMakeLists.txt  Makefile  Makefile_windows  basic.c  matrix.c  matrix.h  method_comparision  miniblas.h  p3_comparisonlr  p3_comparisonlr.c
P4/: CMakeLists.txt  Makefile  Makefile_windows  compiling_error.txt  matrix.c  matrix.h  miniblas.c  p4_inverseiteration  p4_inverseiteration.c
P5/: CMakeLists.txt  Makefile  gridfunc1d.c  leapfrog1d.c  p5_wave  p5_wave.c
P5/P5 Korrektur/: leapfrog1d.c  p5_wave.c
P6/: CMakeLists.txt  Makefile  Makefile_windows  basic.h  cube_4  cuboid_10  cuboid_6  p6_triangulation  p6_triangulation.c  sphere_10  surface3d.c  surface3d.h  test.c
P6/P6/: p6_triangulation.c
P7/: CMakeLists.txt  basic.c  interpolation.c  interpolation.h  p7_interpolation  p7_interpolation.c
P7/P7/: Makefile_windows  interpolation.c  p7_interpolation.c
P8/: CMakeLists.txt  Makefile  Makefile_windows  p8_quadrature  p8_quadrature.c
P8/P8/: p8_quadrature  p8_quadrature.c  quadrature.c  quadrature.h
P8/P8/P8/: quadrature.c
P9/: CMakeLists.txt  Makefile  Makefile_windows  basic.c  p9_adaptive  p9_adaptive.c  quadrature.c  quadrature.h
P9/P9/: p9_adaptive.c  quadrature.c
S1/: p1_lr  p1_lr.c
glut/: CMakeLists.txt  Makefile  test_opengl1.c  test_opengl2.c
