cmake_minimum_required(VERSION 3.7)
project(NumProgSS17)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pedantic -Wall -g -O3 -funroll-loops -march=native -mtune=native -std=gnu99 -Wno-unknown-pragmas")

add_subdirectory(P1)
add_subdirectory(P2)
add_subdirectory(P3)
add_subdirectory(P4)
add_subdirectory(P5)
add_subdirectory(P6)
add_subdirectory(P7)
add_subdirectory(glut)